--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Corazón para ti</title>
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
   <main>
@@ -30,6 +30,6 @@
     </section>
   </main>
 
-  <script src="js/main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
