--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="icon" href="https://res.cloudinary.com/dhpq4rjad/image/upload/v1763018095/descarga-removebg-preview_h3pvx1.png">
+  <link rel="icon" href="Imagen_de_WhatsApp_2025-11-13_a_las_17.46.37_ea8f791e-removebg-preview_hydrfu">
   <title>Corazón para ti</title>
   <link rel="stylesheet" href="main.css" />
 </head>
@@ -23,7 +23,6 @@
     </div>
     <button id="enterBtn">Entrar</button>
     </section>
-    
 
     <section id="heartSection" class="hidden">
       <div id="uiTop">
