--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
       </div>
     </section>
   </main>
+  <div id="cometas">
+  <div class="cometa"></div>
+  <div class="cometa"></div>
+  <div class="cometa"></div>
+</div>
 
+ <img id="planeta1" class="planeta" src="luna.png" alt="Planeta 1">
+ <img id="planeta2" class="planeta" src="saturno.png" alt="Planeta 2">
   <script src="main.js"></script>
 </body>
 </html>
