--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <title>Corazón para ti</title>
   <link rel="stylesheet" href="main.css" />
 
-  <!-- Google tag (gtag.js)
+Google tag (gtag.js)
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GPP3GSDTE1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-GPP3GSDTE1'); -->
+  gtag('config', 'G-GPP3GSDTE1'); 
 
 </script>
 </head>
